update: new functions, cumulative logit model

--- a/inst/ordPCA.html
+++ b/inst/ordPCA.html
@@ -558,7 +558,7 @@ In addiction, the function provides the option of both non-monotone effects and 
 <li><p>Falissard, B. (2009). psy: Various procedures used in psychometry. R package version 1.0.</p></li>
 <li><p>Gertheiss, J., S. Hogger, C. Oberhauser, and G. Tutz (2011). Selection of ordinally scaled independent variables with applications to international classification of functioning core sets. <em>Applied Statistics 60</em>, 377–395.</p></li>
 <li><p>Hoshiyar, A. (2020). Analyzing Likert-type data using penalized non-linear principal components analysis. In: <em>Proceedings of the 35th International Workshop on Statistical Modelling I</em>, 337-340.</p></li>
-<li><p>Hoshiyar, A., H.A.L. Kiers, and J. Gertheiss (2021). Penalized non-linear principal components analysis for ordinal variables with an application to international classification of functioning core sets, Preprint.</p></li>
+<li><p>Hoshiyar, A., H.A.L. Kiers, and J. Gertheiss (2021). Penalized non-linear principal components analysis for ordinal variables with an application to international classification of functioning core sets. <em>British Journal of Mathematical and Statistical Psychology 76<em>, 353-371.</p></li>
 <li><p>Jouvent, R., C. Vindreau, M. Montreuil, C. Bungender, and D. Windlocher (1988). La clinique polydimensionnelle de humeur depressive: Nouvelle version echelle ehd. <em>Psychiatrie et Psychobiologie 3</em>, 245–254.</p></li>
 <li><p>Linting, M., J.J. Meulmann, A.J. von der Kooji, and P.J.F. Groenen (2007). Nonlinear principal components analysis: Introduction and application. <em>Psychological Methods 12</em>, 336-358.</p></li>
 </ul>
